--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		
+		<dependency>
+	      <groupId>org.springframework.cloud</groupId>
+	      <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+		
 				<!-- SpringDoc OpenAPI -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -104,6 +109,7 @@
 	</dependencyManagement>
 
 	<build>
+	    <finalName>grupos-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
