--- a/pom.xml
+++ b/pom.xml
@@ -80,20 +80,24 @@
 	      <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 		
-				<!-- SpringDoc OpenAPI -->
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.7.0</version>
-		</dependency>
-		
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version> 
 			<scope>provided</scope>
 		</dependency>
-		
+
+		        
+		        				<!-- SpringDoc OpenAPI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        
+    
+
 	</dependencies>
 
 	<dependencyManagement>
