remove /api/ controllers

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
     default: dev 
 
   config:
-    #import: ${SPRING_CONFIG_IMPORT} # Importa la configuración externa desde config-server
+    import: ${SPRING_CONFIG_IMPORT} # Importa la configuración externa desde config-server
     #import: optional:configserver:http://localhost:7777/
-    import: optional:configserver:http://192.168.100.23:7777/
+    #import: optional:configserver:http://192.168.100.23:7777/
 
   datasource:
     username: ${db.username} 
@@ -40,7 +40,8 @@ eureka:
     instance-id: "${spring.application.name}:${random.value}" # ID único para registrar esta instancia en Eureka (evita duplicados)
   client:
     service-url:   
-      defaultZone: http://localhost:8761/eureka/
+      #defaultZone: http://192.168.100.23:8761/eureka/
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
 
 springdoc:
   swagger-ui:
