--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,11 @@
         </dependency>
         
     
-
+        <dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+        </dependency>
+		
 	</dependencies>
 
 	<dependencyManagement>
