--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   servlet:
     context-path: /grupos-service
-  port: 8081
+  port: 0
 
 spring:
   application:
@@ -11,9 +11,9 @@ spring:
     default: dev 
 
   config:
-    import: ${SPRING_CONFIG_IMPORT} # Importa la configuración externa desde config-server
+    #import: ${SPRING_CONFIG_IMPORT} # Importa la configuración externa desde config-server
     #import: optional:configserver:http://localhost:7777/
-    #import: optional:configserver:http://192.168.100.23:7777/
+    import: optional:configserver:http://192.168.100.48:7777/
 
   datasource:
     username: ${db.username} 
@@ -23,11 +23,33 @@ spring:
     url: ${db.url} 
     password: ${db.password} 
 
+  cloud:
+    stream:
+      # Definición de los binders disponibles. Un binder es el puente entre tu app y el broker (Kafka).
+      binders:
+        kafka:
+          type: kafka  # Indica que este binder es para Kafka
+          environment:
+            spring:
+              kafka:
+                bootstrap-servers: kafka:9093  # Dirección de tu servidor Kafka
+
+      # Aquí defines los canales lógicos (bindings) que tu app usará para enviar o recibir mensajes
+      bindings:
+        output:
+          destination: mi-topic  # Topic real en Kafka al que se enviarán los mensajes
+          binder: kafka          # Usa el binder llamado "kafka" definido arriba
+
+        input:
+          destination: mi-topic  # Topic real en Kafka del que se recibirán los mensajes
+          group: grupoA          # Grupo de consumidores (sirve para balancear carga y persistencia de offset)
+          binder: kafka          # Usa también el binder de Kafka
+
+
 logging:
   level:
 
     org:
-      springframework.cloud.gateway: DEBUG
       hibernate:
         SQL: DEBUG # Muestra las consultas SQL generadas por Hibernate en la consola
         type:
@@ -40,8 +62,8 @@ eureka:
     instance-id: "${spring.application.name}:${random.value}" # ID único para registrar esta instancia en Eureka (evita duplicados)
   client:
     service-url:   
-      #defaultZone: http://192.168.100.23:8761/eureka/
-      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      defaultZone: http://192.168.100.48:8761/eureka/
+      #defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
 
 springdoc:
   swagger-ui:
