se agrega publisher y topic para notificar consultas

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   servlet:
     context-path: /grupos-service
-  port: 0
+  port: 8081
 
 spring:
   application:
@@ -33,20 +33,51 @@ spring:
           environment:
             spring:
               kafka:
-                bootstrap-servers: 192.168.100.48:9093  # Dirección IP y puerto del broker Kafka
+                bootstrap-servers: 192.168.100.48:9092  # Dirección IP y puerto del broker Kafka
 
       # 🧭 Definición de los canales lógicos de entrada y salida
       bindings:
-        output:
-          destination: mi-topic  # Topic de Kafka al que se enviarán los mensajes
+        consulta-grupos-usuario-out-0:
+          destination: grupos.consulta.usuario  # Topic de Kafka al que se enviarán los mensajes
           binder: kafka          # Usa el binder llamado "kafka"
           content-type: application/json  # Tipo de datos a enviar (recomendado para compatibilidad)
 
-        input:
-          destination: mi-topic  # Topic desde el que se leerán los mensajes
-          group: grupoA          # Grupo de consumidores (permite recibir solo una vez por grupo)
+        grupoCreado-out-0:
+          destination: grupos.creados
           binder: kafka
-          content-type: application/json  # Tipo de datos esperados
+          content-type: application/json
+
+
+        consultaGrupos-out-0:
+          destination: grupos.consulta.usuario
+          binder: kafka
+          content-type: application/json
+
+        solicitudUnirseGrupo-out-0:
+          destination: grupos.usuarios.solicitudes
+          binder: kafka
+          content-type: application/json
+
+        miembroAceptado-out-0:
+          destination: grupos.usuarios.aceptados
+          binder: kafka
+          content-type: application/json
+
+        grupoEditado-out-0:
+          destination: grupos.editados
+          binder: kafka
+          content-type: application/json
+
+        grupoEliminado-out-0:
+          destination: grupos.eliminados
+          binder: kafka
+          content-type: application/json
+
+        #input:
+         # destination: mi-topic  # Topic desde el que se leerán los mensajes
+          #group: grupoA          # Grupo de consumidores (permite recibir solo una vez por grupo)
+          #binder: kafka
+          #content-type: application/json  # Tipo de datos esperados
        # Usa también el binder de Kafka
 
 
@@ -61,13 +92,17 @@ logging:
             sql:
               BasicBinder: TRACE # Muestra también los valores que se "bindean" (asignan) a las consultas SQL
 
+    org.springframework.cloud.stream: DEBUG
+    org.apache.kafka: WARN
+
 eureka:
   instance:
     instance-id: "${spring.application.name}:${random.value}" # ID único para registrar esta instancia en Eureka (evita duplicados)
   client:
     service-url:   
-      defaultZone: http://192.168.100.48:8761/eureka/
+      #defaultZone: http://192.168.100.48:8761/eureka/
       #defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+      defaultZone: "${eureka.registry-server}"
 
 springdoc:
   swagger-ui:
