--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,14 @@
 	        <artifactId>spring-cloud-starter-stream-kafka</artifactId>
         </dependency>
 		
+		
+		
+		<dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+
 	</dependencies>
 
 	<dependencyManagement>
